2004-12-15	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-options.c: Fix a typo in the error message of
	  the --role option. This fixes bug #30.

2004-12-14	Benedikt Meurer <benny@xfce.org>

	* configure.ac, THANKS, terminal/terminal-window.c, po/: Added
	  zh_TW translations from Hydonsingore Sie
	  <hydonsingore@mail.educities.edu.tw>.

2004-12-13	Benedikt Meurer <benny@xfce.org>

	* configure.ac, THANKS, terminal/terminal-window.c, po/: Added
	  en_GB translations from Dwayne Bailey <dwayne@translate.org.za>.

2004-12-12	Benedikt Meurer <benny@xfce.org>

	* terminal/main.c, po/: The --help string is now split up into
	  several smaller strings (one per option) to ease the translators
	  job.

2004-12-12	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c(terminal_widget_key_press_event):
	  Following the accessibility guidelines, pressing Shift<F10> in
	  terminal window also pops up the right-click menu now.
	* terminal/terminal-preferences-dialog.c: Added tooltips for various
	  controls.
	* po/: Updated .po files with recent changes. Updated the german
	  translations.

2004-12-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c: Slightly changed the format
	  of the .tcpalette files. Added check to notify the user when he
	  is attempting to save to a file that already exists.
	* linux.tcpalette, rxvt.tcpalette, vim.tcpalette, xterm.tcpalette,
	  Makefile.am: Added predefined terminal color palette files.

2004-12-09	Benedikt Meurer <benny@xfce.org>

	* pixmaps/, Makefile.am, terminal/terminal-preferences-dialog.c,
	  Terminal.mime.xml: Added possibility to load and save terminal
	  color palettes from and to external files. Terminal additionally
	  installs MIME type and MIME icons for the .tcpalette files into
	  the proper locations to offer best possible desktop integration.

2004-12-09	Benedikt Meurer <benny@xfce.org>

	* terminal/Terminal.spec.in: Added BuildRoot and fixed URL to make