@@ -16,6 +16,8 @@
   backing up and sharing your carefully adjusted palette settings. Terminal
   ships with 4 predefined terminal color palette files.
 - Pressing Shift<F10> also pops up the right-click menu now.
+- Fixed a bug where the size was not always properly set when opening a
+  new terminal tab.
 - New translations: Dwayne Bailey (en_GB), Hydonsingore Sie (zh_TW)
 
 
